--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -48,23 +48,26 @@
 }
 .audioplayer {
   width: 100%;
-  padding: 3rem;
+  padding: 2rem;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 .audio-image {
-  width: 40rem;
-  height: 40rem;
+  width: 38rem;
+  height: 38rem;
   border-radius: 5%;
+  margin-bottom: 0.5rem;
+}
+.audio-name {
 }
 .wrapper-time {
-  width: 40rem;
+  width: 38rem;
   display: flex;
   justify-content: space-between;
 }
 .time-line {
-  width: 40rem;
+  width: 38rem;
   height: 5px;
   background-color: rgb(237, 237, 237);
   border: 1px solid rgb(154, 153, 153);
@@ -76,7 +79,7 @@
   display: flex;
   justify-content: space-around;
 }
-.button-play {
+.button {
   width: 5rem;
   height: 2rem;
   border-radius: 0.5rem;
